name:                symbols
version:             0.2.0.3
synopsis:            Symbol manipulation
description:         Utilities for manipulating type-level strings natively.
license:             BSD3
license-file:        LICENSE
author:              Csongor Kiss
maintainer:          kiss.csongor.kiss@gmail.com
-- copyright:
category:            Dependent Types
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/kcsongor/symbols

library
  exposed-modules:     Data.Symbol.Ascii
                     , Data.Symbol.Utils
                     , Data.Symbol.Examples.Printf
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.10 && <= 5.0
  hs-source-dirs:      src
  default-language:    Haskell2010
