name:                symbols
version:             0.3.0.0
synopsis:            Symbol manipulation
description:         Utilities for manipulating type-level strings natively.
license:             BSD3
license-file:        LICENSE
author:              Csongor Kiss
maintainer:          kiss.csongor.kiss@gmail.com
copyright:           (c) 2018-2019 Csongor Kiss
category:            Dependent Types
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/kcsongor/symbols

library
  exposed-modules:     Data.Symbol.Ascii
                     , Data.Symbol.Utils
                     , Data.Symbol.Examples.Printf
  other-modules:       Data.Symbol.Ascii.Internal
  build-depends:       base >=4.10 && <5
  hs-source-dirs:      src
  ghc-options:         -Wall -Wno-unticked-promoted-constructors
  default-language:    Haskell2010
